# github-bulk-review

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
src/: app.py  config.py  models.py  pull_requests.py
src/gh_requests/: config.py  executor.py  models.py  pull_requests.py  review.py
src/views/: messages.py  pull_requests.py
src/views/main/: models.py  pull_requests.py
src/views/sidebar/: search.py  token.py
