[tool.poetry]
name = "github-bulk-review"
version = "0.1.0"
description = "A tool for bulk reviwing github pull requests."
authors = ["javad-amin <javad.amin@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.22.0"
pygithub = "^1.58.2"
configparser = "^5.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0"
black = ">=23.3"
mypy = ">=1.3"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py311"]
exclude = ".venv"

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ["E501"]
exclude = [".venv",".git","__pycache__"]

[tool.mypy]
ignore_missing_imports = true
files = ["**/*.py"]
exclude = [".venv"]
python_version = "3.11"
